# openptv-python-v2

./: .gitignore  .gitmodules  DISTRIBUTION_GUIDE.md  README.md  TEMP_REQUIREMENTS.md  TRAITSUI_TESTS.md  build_cython.py  build_vec_utils.py  build_wheel_with_extras.py  build_wheels.py  check_calibration.py  check_calibration_methods.py  check_dll_dependencies.py  check_env.py  check_vec_utils.py  debug_test.py  fix_installation.py  fix_paths.py  mock_calibration_file.cal  openptv_python.py  patch_chaco.py  pyproject.toml  pytest.ini  rebuild_cython.py  rename_extensions.py  run_gui.py  run_test.py  run_tests.py  setup.py  setup_conda_env.bat  setup_conda_env.sh  simple_test.py  test_direct_import.py  test_installation.py  test_openptv.py  test_param_bridge.py  test_performance.py  test_tracking.py  use_cython_bindings.py  verify_cython.py  (+4 more)
docs/: migration_guide.md  parameter_docs.md  parameters.md
examples/: convert_par_to_yaml.py  convert_parameters_dir_to_unified_yaml.py  gui_example.py  gui_example_headless.py  gui_example_pyside6.py  gui_mockup.py  gui_screenshot.py  parameter_example.py  simple_tracking.py
openptv/: __init__.py  __init__.py.backup  __init__.py.bck  architecture.md  c_implementation.py  constants.py  factory.py  interface.py  py_implementation.py
openptv_python/: __init__.py  calibration.py  constants.py  tracker.py  tracking_frame_buf.py
tests/: conftest.py  debug_file_test.py  debug_test.py  patched_pyptv_batch.py  simple_test.py  test_all_params.py  test_binding_modules.py  test_both_implementations.py  test_brown_affine_simple.py  (+59 more)
(+207 files in other folders)
