[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "Cython>=0.29.21",
    "numpy>=1.19.0,<2.0",
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39']
include = '\.pyx?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
