[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "Cython>=0.29.21",
    "numpy>=1.19.0,<2.0",
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39']
include = '\.pyx?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.cibuildwheel]
# Skip Python 3.6 and PyPy
skip = ["cp36-*", "pp*", "*-musllinux*"]

# Install dependencies required for building
before-build = "pip install 'numpy>=1.19.0,<2.0' 'cython>=0.29.21'"

# Test the wheels after building
test-command = "python {package}/tests/test_wheel_install.py"
test-requires = ["pytest>=6.0.0", "PyYAML>=6.0"]

# Environment variables for specific platforms
[tool.cibuildwheel.linux]
before-all = "yum install -y gcc gcc-c++"
environment = { CFLAGS="-O3 -march=x86-64", CXXFLAGS="-O3 -march=x86-64" }

[tool.cibuildwheel.macos]
environment = { MACOSX_DEPLOYMENT_TARGET="10.14", CFLAGS="-O3", CXXFLAGS="-O3" }

[tool.cibuildwheel.windows]
environment = { CFLAGS="/O2", CXXFLAGS="/O2" }
